--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "artesaos/seotools": "^1.3",
         "astrotomic/laravel-translatable": "^11.16",
+        "buglinjo/laravel-webp": "^3.1",
         "coderflexx/laravisit": "^2.1",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "2.7",
@@ -40,7 +41,10 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/ImageHelper.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
